# partsprocurementcopilot

./: .env.example  .gitignore  README.md  build-plan.md  code-explainability.md  debug-decisions.md  deployment-steps.md  design-decisions.md  project-retro.md  railway-deployment-lessons.md  railway.toml  system-architecture.md  system-flow.md  testing-edge-cases.md  vendor-outreach-feature.md  vendors.md
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: email_generator.py  email_parser.py  followup_generator.py  ranker.py  response_simulator.py
backend/app/api/: orders.py  procurement.py  search.py  vendors.py  vin.py
backend/app/db/: sqlite_fts.py  supabase.py
backend/app/pipeline/: embed.py  fitment.py  intent.py  rerank.py  retrieve.py  stream.py
backend/app/schemas/: orders.py  parts.py  procurement.py  search.py
backend/app/vin/: decoder.py
backend/app/workers/: job_processor.py
backend/ingestion/: aftermarket.py  embedder.py  eval_runner.py  loader.py  normalizer.py  scraper.py  vendor_seeder.py  vin_seeds.py
code-explainability/: backend-agents.md  backend-api.md  backend-db.md  backend-ingestion.md  backend-pipeline.md  backend-schemas.md  backend-setup.md  backend-workers.md  frontend-components.md  frontend-pages.md  frontend-setup.md  frontend-types-api.md  index.md  infrastructure.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  orders.ts  vin.ts  (+3 more)
migrations/: 001_initial.sql
(+15 files in other folders)
