[project]
name = "parts-procurement-copilot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "supabase>=2.10.0",
    "cohere>=5.11.0",
    "anthropic>=0.40.0",
    "httpx>=0.28.0",
    "playwright>=1.49.0",
    "browserbase>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "ingestion"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
